{
    "name": "Inputs",
    "maps": [
        {
            "name": "Player",
            "id": "2f0b3b2d-4dfc-47be-ac98-265e105f11c7",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1f30f049-3718-4437-9aa9-f46f8533484d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "350140ee-7b5f-41cd-82bc-30e9b8dd88a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ControlCamera",
                    "type": "PassThrough",
                    "id": "66cefc36-c16a-4c3a-973f-91cb0dedbef5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "e1d9e23c-1183-42b2-8cab-725cff578b7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamControl",
                    "type": "PassThrough",
                    "id": "9c8e712f-9795-4cf9-891d-69906e6c647b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item1",
                    "type": "Button",
                    "id": "2f3a0ebc-bca2-4e40-a748-8f30bcb8742e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item2",
                    "type": "Button",
                    "id": "b65513b3-7472-4111-a3c7-143a94a9038d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item3",
                    "type": "Button",
                    "id": "c3ae7ebf-be3c-4967-88b3-d1d86b7046ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item4",
                    "type": "Button",
                    "id": "64f3814e-95ff-44fb-b59b-2ed2998c9bb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item5",
                    "type": "Button",
                    "id": "9d2f08f9-9aab-4c88-8142-ec0b229d8e94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item6",
                    "type": "Button",
                    "id": "143deb74-1ad8-46ad-980e-68acc9490b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Item7",
                    "type": "Button",
                    "id": "c58516a3-d79b-424b-b54a-45f3dd83dfe4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "openInventory",
                    "type": "Button",
                    "id": "766e9f4f-a595-4213-9c8f-8f04151da319",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "19e4d479-4f7f-4007-9654-36bb6896bf99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Holster",
                    "type": "Button",
                    "id": "c8bf9958-6092-4600-b1a3-e628df9a7369",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapWeapon1",
                    "type": "Button",
                    "id": "f680ff11-7ab4-4ccf-9798-0103e8a163e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapWeapon2",
                    "type": "Button",
                    "id": "e63b352e-d805-48c9-80df-255cf2de4ff2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "adecb306-7885-4e55-9b4d-656b1a96df06",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "77071c68-178e-45ee-afa0-345250de6772",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "36889c41-d8e7-40e4-82c1-ffc93ef18393",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "16e147cb-65bb-4686-917f-a3d94c505e90",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "eebd9182-78d9-4a56-8e11-551f17d7e74d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fdb20f1a-946b-47f0-bedc-7b923bb61442",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f152407a-0c0b-4e70-98f4-aa2025c85e66",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4963aaa2-f66f-4ca1-ab2c-e984e9f2eace",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2375a0b-5652-4a20-ab8e-9f8161192330",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14bb7633-76c5-44bf-88b1-253f25f61e74",
                    "path": "<Keyboard>/1",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Item1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02916353-fc0a-4c10-bb25-9810e7a09224",
                    "path": "<Keyboard>/r",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc37d54d-c4b6-4d20-af11-ba4fc029cb6b",
                    "path": "<Keyboard>/h",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Holster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23d0fe39-d834-45f5-b82a-40fc5fe1bc87",
                    "path": "<Keyboard>/j",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SwapWeapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "329f830d-1b6f-4c28-878b-6499a51ebc76",
                    "path": "<Keyboard>/k",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SwapWeapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20417a2d-867d-49e3-bec1-3a9d7b55baea",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58a86715-761c-432d-a0e5-a586b3667601",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae1b41ba-daaa-4d74-bc79-8944cbfb5a56",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c153a509-1ac3-4257-b4ea-88f3e63e80ce",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc52ee08-df8d-4aab-b56f-df45b1eee607",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51fd26bd-fe01-40b4-9dd6-77fc9a90e9c4",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Item7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50328423-fb50-4272-91c4-a57394d0ab04",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "openInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}